<resources>
  <string name="app_name">SHConnection</string>

  <!--引导页面-->
  <string name="login_directly">直接登录</string>
  <string name="add_new_class">加入班级</string>

  <!--登录页面-->
  <string name="input_number_">输入工号或者学号</string>
  <string name="input_parent_number">输入学号</string>
  <string name="input_teacher_number">输入工号</string>
  <string name="text__confirm">确定</string>
  <string name="create_class">创建班级</string>
  <string name="input_password">输入密码</string>
  <string name="txt_teacher">我是老师</string>
  <string name="txt_student">我是学生</string>
  <string name="txt_name">输入姓名</string>
  <string name="txt_subject">输入科目</string>

  <!--创建班级-->
  <string name="teacher_name">班主任姓名</string>
  <string name="teacher_number">班主任工号</string>
  <string name="class_name">班级名称</string>
  <string name="import_students_info">导入学生信息</string>
  <string name="import_teacher_info">导入科任老师信息</string>
  <string name="login_directly_info">已经注册过的老师和家长可以直接登录</string>
  <string name="join_class_info">没有帐号的老师和家长扫码并且加入班级</string>
  <string name="create_class_info">班主任老师创建班级并且导入信息</string>

  <string name="scan_from_actual_view">扫一扫进入班级</string>
  <string name="scan_from_system_gallery">从系统相册读取</string>

  <string name="navigation_address">通讯录</string>
  <string name="navigation_home">家校圈</string>
  <string name="navigation_comment">孩子评价</string>

  <string name="address_search">搜索</string>
  <string name="news_cancel">取消</string>
  <string name="news_send">发表</string>
  <string name="news_read">已读</string>
  <string name="news_unread">未读</string>
  <string name="news_comment">留下评论</string>

  <string name="evaluation_hint">我的孩子……</string>
  <string name="evaluation_text1">活动水平</string>
  <string name="evaluation_text2">作息规律</string>
  <string name="evaluation_text3">情绪状况</string>
  <string name="evaluation_text4">专注力</string>
  <string name="evaluation_text5">礼貌素质</string>
  <string name="evaluation_score_zero">0</string>
  <string name="teacher_create_account">没有帐号?注册一个！</string>

  <string name="register">注册</string>

  <!--班主任注册-->
  <string name="mainteacher_name">班主任姓名</string>
  <string name="mainteacher_number">班主任工号</string>
  <string name="mainn_teacher_password">班主任密码</string>

</resources>
